k8s/mediaserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-deployment
  labels:
    app: qbittorrent
  namespace: mediaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: malinka3
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
          - containerPort: 30001
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "2000m"
          volumeMounts:
            # - mountPath: /config
            #   name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /config/qBittorrent.conf
              name: qbittorrent-config
              subPath: qbittorrent.conf
            - mountPath: /config/qBittorrent/qBittorrent.conf
              name: qbittorrent-config
              subPath: qbittorrent.conf

      volumes:
        # - name: config
        #   persistentVolumeClaim:
        #     claimName: qbittorrent-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: samba-transmission-pvc
        - name: qbittorrent-config
          configMap:
            name: qbittorrent-config
