k8s/mediaserver/samba.yaml
apiVersion: v1
kind: Service
metadata:
  name: samba-headless
  namespace: mediaserver
spec:
  clusterIP: None
  selector:
    app: samba
  ports:
    - name: netbios-ssn
      port: 139
      targetPort: 139
      protocol: TCP
    - name: smb
      port: 445
      targetPort: 445
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samba
  namespace: mediaserver
  labels:
    app: samba
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samba
  template:
    metadata:
      labels:
        app: samba
    spec:
      # SMB clients usually expect direct 139/445 on the node IP.
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: malinka3
      containers:
        - name: samba
          image: docker.io/dperson/samba:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: netbios-ssn
              containerPort: 139
              protocol: TCP
            - name: smb
              containerPort: 445
              protocol: TCP
          volumeMounts:
            - name: transmission
              mountPath: /transmission
      volumes:
        - name: transmission
          persistentVolumeClaim:
            claimName: samba-transmission-pvc
