k8s/mediaserver/smb-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: smb
  namespace: mediaserver
spec:
  type: LoadBalancer
  loadBalancerIP: 10.100.2.202
  selector:
    app: smb-server
  ports:
    # - name: netbios-ssn
    #   port: 139
    #   targetPort: 139
    #   protocol: TCP
    - name: smb
      port: 445
      targetPort: 445
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smb-server
  namespace: mediaserver
  labels:
    app: smb-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smb-server
  template:
    metadata:
      labels:
        app: smb-server
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: hw
                    operator: In
                    values:
                      - pi5
      containers:
        - name: samba
          image: docker.io/dperson/samba:latest
          imagePullPolicy: IfNotPresent
          ports:
            # - name: netbios-ssn
            #   containerPort: 139
            #   protocol: TCP
            - name: smb
              containerPort: 445
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: smb
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: smb
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: mediaserver-shared
              mountPath: /mediaserver
      volumes:
        - name: mediaserver-shared
          persistentVolumeClaim:
            claimName: mediaserver-shared-pvc
