k8s/mediaserver/transmission.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission-route
  namespace: mediaserver
  annotations:
    konghq.com/strip-path: "false"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Transmission
    gethomepage.dev/description: Torrent client (legacy)
    gethomepage.dev/group: Media
    gethomepage.dev/icon: transmission.png
    gethomepage.dev/pod-selector: app=transmission
spec:
  parentRefs:
    - name: kong-gw-01
      namespace: kong
  hostnames:
    - transmission.k.4esnok.su
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /transmission
      backendRefs:
        - name: transmission-service
          port: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-service
  namespace: mediaserver
spec:
  selector:
    app: transmission
  ports:
    - name: rpc-http
      protocol: TCP
      port: 9091
      targetPort: 9091
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-service-external
  namespace: mediaserver
spec:
  selector:
    app: transmission
  ports:
    - name: peer-tcp
      protocol: TCP
      port: 52413
      targetPort: 52413
    - name: peer-udp
      protocol: UDP
      port: 52413
      targetPort: 52413
    - name: rpc-http
      protocol: TCP
      port: 80
      targetPort: 9091
  type: LoadBalancer
  loadBalancerIP: 192.168.88.243
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-deployment
  labels:
    app: transmission
  namespace: mediaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:4.1.0
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "2000m"
          volumeMounts:
            - name: transmission-data
              mountPath: /config
            - name: mediaserver-shared
              mountPath: /media
            # - name: watch
            #   mountPath: /watch
            #   subPath: watch
      volumes:
        - name: transmission-data
          persistentVolumeClaim:
            claimName: transmission-data-pvc
        - name: transmission-settings
          configMap:
            name: transmission-config
        - name: mediaserver-shared
          persistentVolumeClaim:
            claimName: mediaserver-shared-pvc
